test/classes/nilability/while-var-error-type.good
while-var-error-type.chpl:3: error: "while var/const" construct cannot be invoked on a type
