test/classes/nilability/while-var-error-type.chpl
// Error: condition on a type

while const LT = Locales.type do  // error
  writeln("it is not nil!");
